--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <img src="IMG_5658.PNG" class="card-img-top" style="height: 200px;" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Calculator</h5>
-                                <p class="card-text">A functional calculator with a user-friendly UI.</p>
+                                <p class="card-text">A functional calculator with a user-friendly  simple and efficient .</p>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                             <img src="photo_2025-03-27_11-11-12.jpg" class="card-img-top" style="height: 200px;"  alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Ping Pong</h5>
-                                <p class="card-text">A classic two-player ping pong game</p>
+                                <p class="card-text">A classic two-player ping pong game fast,fun and responsive.</p>
                             </div>
                         </div>
                     </div>
@@ -92,8 +92,8 @@
                         <div class="card" style="width: 300px;">
                             <img src="IMG_5659.PNG" class="card-img-top" style="height: 200px;" alt="...">
                             <div class="card-body text-center">
-                                <h5 class="card-title">ACT clone</h5>
-                                <p class="card-text"> act</p>
+                                <h5 class="card-title">ACT CLONE</h5>
+                                <p class="card-text"> This project is a recreacion of the ACT website for educational purposes.</p>
                             </div>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                             <img src="photo_2025-03-27_11-11-27.jpg" class="card-img-top" style="height: 200px;" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Event Organizer</h5>
-                                <p class="card-text">an event</p>
+                                <p class="card-text">This project showcase my web development skills in event managemet solutions.</p>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                             <img src="IMG_5660.PNG" class="card-img-top" style="height: 200px;" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">To do list</h5>
-                                <p class="card-text">to.</p>
+                                <p class="card-text">This project demonstrates in building productive tools</p>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                             <img src="IMG_5661.PNG" class="card-img-top" style="height: 200px;" alt="...">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Registeral form</h5>
-                                <p class="card-text">reg.</p>
+                                <p class="card-text">Secure and simple Registeral form</p>
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
     <section id="contact" class="text-center py-5 bg-dark text-light">
         <div class="container">
             <h2 class="mb-4">Contact</h2>
-            <p>Email: <a href="mailto:hermelae@gmail.com" class="text-light">hermelae@gmail.com</a></p>
+            <p>Email: <a href="mailto:hermelae@gmail.com" class="text-light">hermelaelias96@gmail.com</a></p>
             <p>Other social media: <a href="#" class="text-light">@hermi (Instagram)</a></p>
         </div>
     </section>
